--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@headlessui/vue": "^1.7.13",
     "@heroicons/vue": "^2.0.18",
     "core-js": "^3.8.3",
+    "flowbite": "^1.6.5",
     "vue": "^3.2.13"
   },
   "devDependencies": {
